[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/boss.gd" type="Script" id=1]
[ext_resource path="res://graphic/BossHealthBarBorder.png" type="Texture" id=2]
[ext_resource path="res://graphic/BossHealthBar.png" type="Texture" id=3]
[ext_resource path="res://graphic/Boss.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 71.9436
height = 73.9277

[node name="Boss" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57221
shape = SubResource( 1 )

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = -120.0
margin_top = 64.0
margin_right = 120.0
margin_bottom = 144.0
max_value = 1000.0
texture_progress = ExtResource( 3 )

[node name="healthBarBorder" type="TextureRect" parent="."]
margin_left = -128.0
margin_top = 64.0
margin_right = 122.0
margin_bottom = 144.0
texture = ExtResource( 2 )

[node name="Position1" type="Position2D" parent="."]
position = Vector2( 40, 65 )

[node name="Position2" type="Position2D" parent="."]
position = Vector2( -40, 65 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_Boss_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
